post-live edits

--- a/basement-renovations.html
+++ b/basement-renovations.html
@@ -49,7 +49,7 @@
     <br />
     <div class="bg-gray">
       <h3>Get in touch with us today to discuss the details of your basement renovation.</h3>
-      <a class="btn btn-primary" href="/contact-us.html">Contact Us</a>
+      <a class="btn btn-primary" href="/contact-us">Contact Us</a>
     </div>
       <div class="text-align-left">
           <br />
@@ -74,7 +74,7 @@
          Get in touch with us today to discuss the details of your basement renovation.
         </span>
         <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us.html">Contact Us</a>
+        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
       </div>
     </section>
     <section id="contactus"></section>
