--- a/bathroom-renovations.html
+++ b/bathroom-renovations.html
@@ -46,7 +46,7 @@
     <br />
     <div class="bg-gray">
       <h3>Get in touch with us today to discuss the details of your bathroom remodel. We'll replace the ugly features in your bathroom with new ones you'll love.</h3>
-      <a class="btn btn-primary" href="/contact-us.html">Contact Us</a>
+      <a class="btn btn-primary" href="/contact-us">Contact Us</a>
     </div>
       <div class="text-align-left">
           <br />
@@ -83,7 +83,7 @@
           Don’t wait any longer to get started on your bathroom remodel. Contact us today to arrange for bathroom remodeling services.
         </span>
         <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us.html">Contact Us</a>
+        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
       </div>
     </section>
     <section id="contactus"></section>
