--- a/deck-pergolas.html
+++ b/deck-pergolas.html
@@ -17,45 +17,30 @@
     <div class="hero-nav deck">
     <div class="hero-nav__inner">
         <h1>Relax On a Spacious Backyard Deck</h1>
-        <a class="btn btn-primary" href="/contact-us.html">See how we can help finance</a>
+        <a class="btn btn-primary" href="#discover-email-form-anchor">Need some ideas?</a>
     </div>
 </div>
 <div class="subpage-content">
   <h2>Make sure you hire an experienced deck builder in Cedar Falls, IA</h2>
-    <p>Our professional deck builder can construct a treated wood, cedar wood, Trex or AZEK composite deck on your property in no time! Our experienced sales associate will meet with you at your home, go over your size and material preferences and get to work designing and budgeting your dream deck. You’ll be relaxing in the open air and flipping burgers on your backyard deck in no time. Our experienced staff can work with your budget and help you make the best decision that will provide the best value to your home.
+    <p>Our experienced sales associate will meet with you at your home, go over your size and material preferences and get to work designing and budgeting your dream deck. You’ll be relaxing in the open air and flipping burgers on your backyard deck in no time. Our experienced staff can work with your budget and help you make the best decision that will provide the best value to your home.
     </p>
-    <br />
-    <p>Our professional pergola builder can construct a wood or composite pergola on your property in just a few days’ time! Our experienced pergola installers will build you a beautiful pergola to provide shade, added design, or outdoor lighting that fits your needs. You’ll be relaxing in the shade with a drink in your hand in a snap.</p>
     <br />
     <p>T.E.A.M. Builders LTD has experience building custom decks and pergolas of all kinds on properties in the Cedar Falls, IA area. Rely on us to build your custom deck quickly and correctly.</p>
     <br />
-    <h3>Enjoy backyard cookouts all summer long</h3>
+    <h3 id="discover-email-form-anchor">Enjoy backyard cookouts all summer long</h3>
     <p>Looking for a trustworthy deck or pergola builder? Look no further. T.E.A.M. Builders LTD constructs custom decks in Cedar Falls, IA and surrounding areas. A backyard deck/pergola will:</p>
-    <div class="feature-container">
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>Extend Your Living Space</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>Allow you to entertain guests outdoors</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>	
-Give you a comfortable backyard area to hang out in</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>Make outdoor grilling and dining easier</p>
-      </div>
-      <div class="feature">
-        <i class="fa fa-check-circle" aria-hidden="true"></i>
-        <p>	
-Increase your property value with a long lasting and maintenance-free deck/pergola</p>
-      </div>
-    </div>
     <br />
+    <div id="mc_embed_signup">
+        <form action="https://teambuilderslimited.us2.list-manage.com/subscribe/post?u=3505b437145ee33b184d2b30a&amp;id=5ee4451a83" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+        <label for="mce-EMAIL" style="color: #666;">Discover Trends, Ideas, Inspiration &amp; Products</label>
+        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email address" style="border: 1px solid #666!important;" required>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3505b437145ee33b184d2b30a_5ee4451a83" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"></div>
+            </div>
+        </form>
+    </div>
       <div class="text-align-left">
           <br />
           <!-- <h4 class="h1">Before & After</h4>
@@ -102,7 +87,7 @@ Increase your property value with a long lasting and maintenance-free deck/pergo
          Contact us today to learn more about our deck building and pergola installation services. We also offer a wide variety of in-house financing to clients who are interested in financing options.
         </span>
         <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us.html">Contact Us</a>
+        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
       </div>
     </section>
     <section id="contactus"></section>
