--- a/event-venues.html
+++ b/event-venues.html
@@ -16,7 +16,7 @@
     <div class="hero-nav event">
     <div class="hero-nav__inner">
         <h1>Event Venues in Cedar Falls, IA</h1>
-        <a class="btn btn-primary" href="/contact-us.html">See Our Work</a>
+        <a class="btn btn-primary" href="/contact-us">See Our Work</a>
     </div>
 </div>
 <div class="subpage-content">
