--- a/exterior-remodeling.html
+++ b/exterior-remodeling.html
@@ -21,7 +21,7 @@
 </div>
 <div class="subpage-content">
   <h2>Speak with our deck builder in Cedar Falls, IA today</h2>
-    <p>Does your house need a face-lift? Don’t let your home’s old, dirty exterior diminish your curb appeal. Get in touch with the pros at T.E.A.M. Builders Ltd. today. Whether you want to update the <a href="/siding.html" class="green-link">siding</a> on your house or need <a href="/fencing.html" class="green-link">fence</a> installation help in Cedar Falls, IA, you can rely on us to finish the job.
+    <p>Does your house need a face-lift? Don’t let your home’s old, dirty exterior diminish your curb appeal. Get in touch with the pros at T.E.A.M. Builders Ltd. today. Whether you want to update the <a href="/siding" class="green-link">siding</a> on your house or need <a href="/fencing" class="green-link">fence</a> installation help in Cedar Falls, IA, you can rely on us to finish the job.
     </p>
     <p>Once we’re finished, you’ll be amazed by how beautiful your house looks. Trust us-your neighbors will notice, too.</p>
     <p>Call us at <a href="tel:3194818326" class="green-link"">319-481-8326</a> now speak with a deck builder in Cedar Falls, IA.</p>
@@ -35,19 +35,19 @@
             <div class="feature-container">
                 <div class="feature">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
-                  <a href="/siding.html">Repair or replace your siding</a>
+                  <a href="/siding">Repair or replace your siding</a>
                 </div>
                 <div class="feature">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
-                  <a href="/roofing.html">Fix your roof</a>
+                  <a href="/roofing">Fix your roof</a>
                 </div>
                 <div class="feature">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
-                  <a href="/decks.html">Install a custom deck or patio</a>
+                  <a href="/decks">Install a custom deck or patio</a>
                 </div>
                 <div class="feature">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
-                  <a href="/fencing.html">Add a fence around your yard</a>
+                  <a href="/fencing">Add a fence around your yard</a>
                 </div>
               </div>
           </div>
@@ -74,7 +74,7 @@
           Don’t wait any longer to hire our fence installation team in Cedar Falls, IA to complete your exterior remodeling project.
         </span>
         <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us.html">Contact Us</a>
+        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
       </div>
     </section>
     <section id="contactus"></section>
