--- a/fencing.html
+++ b/fencing.html
@@ -16,7 +16,7 @@
     <div class="hero-nav fencing">
     <div class="hero-nav__inner">
         <h1>Secure Your Property With Attractive Fencing</h1>
-        <a class="btn btn-primary" href="/contact-us.html">See how we can help finance</a>
+        <a class="btn btn-primary" href="/contact-us">See how we can help finance</a>
     </div>
 </div>
 <div class="subpage-content">
@@ -57,7 +57,7 @@
             <p>Choose T.E.A.M. Builders for fence installation services in the Cedar Falls, IA area. Installing a fence is a smart investment because it will:</p>
             <p>Call 319-481-8326 now to schedule fence installation services. Our fencing contractor will be glad to provide you with a free estimate. We also offer a wide variety of in-house financing to clients who are interested in financing options.</p>
             <br />
-            <a class="btn btn-primary" href="/contac.html">Contact Us</a>
+            <a class="btn btn-primary" href="/contac">Contact Us</a>
           </div>
           <br />
           <!-- <h4 class="h1">Before & After</h4>
@@ -82,7 +82,7 @@
          Call <a href="tel:3194818326" class="phone">319-481-8326</a> now to schedule fence installation services. Our fencing contractor will be glad to provide you with a free estimate. We also offer a wide variety of in-house financing to clients who are interested in financing options.
         </span>
         <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us.html">Contact Us</a>
+        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
       </div>
     </section>
     <section id="contactus"></section>
