--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-secondary"></div>
             </div>
         </form>
-        </div>
+    </div>
   </div>
   </div>
 	<div id="main-content">
@@ -58,7 +58,7 @@
       <div id="main-content-service-cards-interior">
       <!-- <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="/bathroom-renovations.html">Bathroom</a></h3>
+          <h3><a href="/bathroom-renovations">Bathroom</a></h3>
         </div>
         <div class="service-card-image">
           <img src="images/work/bathroom-renovations/bathroom-2.png" alt="Bathroom">
@@ -66,7 +66,7 @@
       </div> -->
       <div class="service-card mr-20">
         <div class="service-card-header">
-          <h3><a href="/basement-renovations.html">Basement</a></h3>
+          <h3><a href="/basement-renovations">Basement</a></h3>
         </div>
         <div class="service-card-image">
           <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement">
@@ -74,7 +74,7 @@
       </div>
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="/kitchen-renovations.html">Kitchen</a></h3>
+          <h3><a href="/kitchen-renovations">Kitchen</a></h3>
         </div>
         <div class="service-card-image">
           <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="Kitchen">
@@ -84,7 +84,7 @@
      <div id="main-content-service-cards-exterior" class="hidden">
           <div class="service-card mr-20">
             <div class="service-card-header">
-              <h3><a href="/fencing.html">Fences</a></h3>
+              <h3><a href="/fencing">Fences</a></h3>
             </div>
             <div class="service-card-image">
               <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/fence.png" alt="Fencing">
@@ -92,7 +92,7 @@
           </div>
           <div class="service-card mr-20">
             <div class="service-card-header">
-              <h3><a href="/roofing.html">Roofing</a></h3>
+              <h3><a href="/roofing">Roofing</a></h3>
             </div>
             <div class="service-card-image">
               <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Roofing">
@@ -100,7 +100,7 @@
           </div>
           <div class="service-card mr">
             <div class="service-card-header">
-              <h3><a href="/decks.html">Decks</a></h3>
+              <h3><a href="/decks">Decks</a></h3>
             </div>
             <div class="service-card-image">
               <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Decks">
@@ -108,7 +108,7 @@
           </div>  
         <div class="service-card mr-20">
             <div class="service-card-header">
-              <h3><a href="/pergolas.html">Pergolas</a></h3>
+              <h3><a href="/pergolas">Pergolas</a></h3>
             </div>
             <div class="service-card-image">
               <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p1.jpg" alt="Pergolas">
@@ -116,7 +116,7 @@
           </div>  
           <div class="service-card">
             <div class="service-card-header">
-              <h3><a href="/siding.html">Siding</a></h3>
+              <h3><a href="/siding">Siding</a></h3>
             </div>
             <div class="service-card-image">
               <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="Siding">
@@ -128,7 +128,7 @@
      <div id="main-content-service-cards-new-construction" class="hidden">
       <div class="service-card mr-20">
         <div class="service-card-header">
-          <h3><a href="/interior-remodeling.html">Home Additions</a></h3>
+          <h3><a href="/interior-remodeling">Home Additions</a></h3>
         </div>
         <div class="service-card-image">
           <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/home-additions/home+additions.JPG" alt="Home Additions">
@@ -136,7 +136,7 @@
       </div>
       <div class="service-card">
         <div class="service-card-header">
-          <h3><a href="/shed-homes-shouses.html">Shed Houses</a></h3>
+          <h3><a href="/shed-homes-shouses">Shed Houses</a></h3>
         </div>
         <div class="service-card-image">
           <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/farm-shed.png" alt="Agricultural & Commrcial Buidings">
@@ -150,7 +150,7 @@
       <p style="">Our home remodeler should be the top choice for your home renocation project. With more than a decade of experience, the crew at TEAM Builders LTD has what it takes to transform your current house into your dream home. There is no project too big or too small for us.</p>
       <p>Call 319-481-8326 now to discuss your design ideas with a skilled remodeling contractor in Cedar Falls, IA</p>
       <br />
-      <a href="/process.html" class="btn btn-primary">Our Process</a>
+      <a href="/process" class="btn btn-primary">Our Process</a>
     </div>
     <div class="below-main-content-image">
       <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/our-process.png" alt="Our Process">
@@ -163,7 +163,7 @@
         Family owned business serving with pride. A local business you can trust.
       </span>
       <div class="triangle"></div>
-      <a class="btn btn-secondary">Get an Estimate</a>
+      <a class="btn btn-secondary" href="/contact-us">Get an Estimate</a>
     </div>
   </section>
   <section>
@@ -233,7 +233,7 @@
         Learn more about our rewards program
       </span>
       <div class="triangle"></div>
-      <a href="/referral.html" class="btn btn-secondary">Learn More</a>
+      <a href="/referral" class="btn btn-secondary">Learn More</a>
     </div>
   </section>
   <section id="contactus">
