--- a/interior-remodeling.html
+++ b/interior-remodeling.html
@@ -29,20 +29,20 @@
         <div class="row">
           <div class="col mr-5">
             <h3>Bring your remodeling vision to life</h3>
-            <p>Home is where the heart is—so turn your house into a home you’ll love. When you hire the pros at T.E.A.M. Builders Ltd., you can rest assured your house is in great hands. We’ve helped many homeowners with their <a href="/kitchen-renovations.html" class="green-link">kitchens</a>, <a href="/bathroom-renovations.html" class="green-link">bath</a>, and <a href="/basement-renovations.html" class="green-link">basement/home</a> additions renovations in Cedar Falls, IA. We’ll make your home the envy of the neighborhood for a price that fits your budget.</p>
+            <p>Home is where the heart is—so turn your house into a home you’ll love. When you hire the pros at T.E.A.M. Builders Ltd., you can rest assured your house is in great hands. We’ve helped many homeowners with their <a href="/kitchen-renovations" class="green-link">kitchens</a>, <a href="/bathroom-renovations" class="green-link">bath</a>, and <a href="/basement-renovations" class="green-link">basement/home</a> additions renovations in Cedar Falls, IA. We’ll make your home the envy of the neighborhood for a price that fits your budget.</p>
             <p>Call us at <a href="tel:3194818326" class="green-link"">319-481-8326</a> now to speak with a pro about your kitchens and basement/home additions remodeling ideas in Cedar Falls, IA.</p>
             <div class="feature-container">
                 <div class="feature">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
-                  <a href="/contact-us.html">Meet with you to discuss your design ideas, schedule and budget</a>
+                  <a href="/contact-us">Meet with you to discuss your design ideas, schedule and budget</a>
                 </div>
                 <div class="feature">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
-                  <a href="/contact-us.html">Present you with a personalized plan and give you a free renovation estimate</a>
+                  <a href="/contact-us">Present you with a personalized plan and give you a free renovation estimate</a>
                 </div>
                 <div class="feature">
                   <i class="fa fa-check-circle" aria-hidden="true"></i>
-                  <a href="/basement-renovations.html">Create a custom space that you and your family will love</a>
+                  <a href="/basement-renovations">Create a custom space that you and your family will love</a>
                 </div>
               </div>
           </div>
