--- a/kitchen-renovations.html
+++ b/kitchen-renovations.html
@@ -59,7 +59,7 @@
     <br />
     <div class="bg-gray">
       <h3>Call 319-481-8326 now to get started on your kitchen remodel. We'll install your kitchen upgrades with care and attention to detail.</h3>
-      <a class="btn btn-primary" href="/contact-us.html">Contact Us</a>
+      <a class="btn btn-primary" href="/contact-us">Contact Us</a>
     </div>
       <div class="text-align-left">
           <br />
@@ -104,7 +104,7 @@
          Reach out to us right away to learn more about our kitchen upgrades.
         </span>
         <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us.html">Contact Us</a>
+        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
       </div>
     </section>
     <section id="contactus"></section>
