--- a/pergolas.html
+++ b/pergolas.html
@@ -15,7 +15,7 @@
     <div class="hero-nav pergola">
     <div class="hero-nav__inner">
         <h1>Relax On a Spacious Backyard Pergola</h1>
-        <a class="btn btn-primary" href="/contact-us.html">See how we can help finance</a>
+        <a class="btn btn-primary" href="/contact-us">See how we can help finance</a>
     </div>
 </div>
 <div class="subpage-content">
@@ -80,7 +80,7 @@ Increase your property value with a long lasting and maintenance-free deck/pergo
           Contact us today <a href="tel:3194818326" class="green-link">319-481-8326</a> to learn more about our deck building and pergola installation services. We also offer a wide variety of in-house financing to clients who are interested in financing options.
         </span>
         <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us.html">Contact Us</a>
+        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
       </div>
     </section>
     <section id="contactus"></section>
