--- a/roofing.html
+++ b/roofing.html
@@ -16,7 +16,7 @@
     <div class="hero-nav roofing">
     <div class="hero-nav__inner">
         <h1>Install a Durable, Attractive Roof</h1>
-        <a class="btn btn-primary" href="/contact-us.html">See how we can help finance</a>
+        <a class="btn btn-primary" href="/contact-us">See how we can help finance</a>
     </div>
 </div>
 <div id="roofing-estimate-form">
@@ -272,7 +272,7 @@
          Contact us right away to arrange for roof repair or installation services.
         </span>
         <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us.html">Contact Us</a>
+        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
       </div>
     </section>
     <section id="contactus"></section>
