--- a/shed-homes-shouses.html
+++ b/shed-homes-shouses.html
@@ -29,7 +29,7 @@
     <br />
     <div class="bg-gray">
       <h3>Get in touch with us today!</h3>
-      <a class="btn btn-primary" href="/contact-us.html">Contact Us</a>
+      <a class="btn btn-primary" href="/contact-us">Contact Us</a>
     </div>
       <div class="text-align-left">
           <br />
@@ -55,7 +55,7 @@
           Get an estimate today with T.E.A.M. Builders Ltd.
         </span>
         <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us.html">Contact Us</a>
+        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
       </div>
     </section>
     <section id="contactus"></section>
