--- a/siding.html
+++ b/siding.html
@@ -16,7 +16,7 @@
     <div class="hero-nav siding">
     <div class="hero-nav__inner">
         <h1>Give Your Home a Whole New Look</h1>
-        <a class="btn btn-primary" href="/contact-us.html">See how we can help finance</a>
+        <a class="btn btn-primary" href="/contact-us">See how we can help finance</a>
     </div>
 </div>
 <div class="subpage-content">
@@ -95,7 +95,7 @@ Will protect your home from the elements</p>
           Whether your siding is damaged and just needs minor repairs or if you’re in need of a full siding replacement, we can handle it. Heck, we can even paint you existing aluminum or wood siding to change it’s apperance if that’s all you need! Rely on T.E.A.M. Builders LTD to change the apperance of your home!
         </span>
         <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us.html">Contact Us</a>
+        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
       </div>
     </section>
     <section id="contactus"></section>
