--- a/agriculture-commercial-buildings.html
+++ b/agriculture-commercial-buildings.html
@@ -16,7 +16,7 @@
     <div class="hero-nav commercial">
     <div class="hero-nav__inner">
         <h1>Agriculture & Commercial Buildings in Cedar Falls, IA</h1>
-        <a class="btn btn-primary" href="/contact-us.html">See Our Work</a>
+        <a class="btn btn-primary" href="/contact-us">See Our Work</a>
     </div>
 </div>
 <div class="subpage-content">
