--- a/contact-us.html
+++ b/contact-us.html
@@ -10,7 +10,10 @@
     <meta name="description" content="Find a Home Remodeler in Cedar Falls, IA. Hire a local home renovation pro. Thank you for choosing T.E.A.M. Builders Ltd. Our remodeling contractor in Cedar Falls, IA is equipped to handle all your home renovation needs.">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
-  </head>
+      <!-- Scripts -->
+      <script src="js/script.js"></script>
+      <script src="js/loadTemplate.js"></script>
+    </head>
   <body>
     <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
@@ -59,18 +62,17 @@
       <span>
         Family owned business serving with pride. A local business you can trust.
       </span>
+      <div class="triangle"></div>
+      <a class="btn btn-secondary" href="/about-t-e-a-m-builders">About Us</a>
     </div>
   </section>
   <section id="contactus"></section>
-  <a href="#calendly-scheduler" id="calendly-scheduler" class="btn btn-calendly calendly-scheduler">Setup an Initial Call!<span class="powered-by">Powered by Calendly</span></a>
+  <a href="#calendly-scheduler" id="calendly-scheduler" class="btn btn-calendly calendly-scheduler">Setup an Initial Call!<span class="powered-by"> Powered by Calendly</span></a>
   <footer id="footer">
   </footer>
   <div class="calendly">
     <a href="#calendly-scheduler-close" id="calendly-scheduler-close" class="btn"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
-    <iframe src="https://calendly.com/aoneil12?embed_domain=teambuilderslimited.com&embed_type=PopupWidget" width: "100%" height="100%" frameborder="0">
+    <iframe src="https://calendly.com/aoneil12?embed_domain=teambuilderslimited.com&embed_type=PopupWidget" width= "100%" height="100%" frameborder="0">
   </div>
-    <!-- Scripts -->
-    <script src="js/script.js"></script>
-    <script src="js/loadTemplate.js"></script>
   </body>
 </html>
