--- a/process.html
+++ b/process.html
@@ -43,7 +43,7 @@
         Family owned business serving with pride. A local business you can trust.
       </span>
       <div class="triangle"></div>
-      <a class="btn btn-secondary" href="/contact-us.html">Get an Estimate</a>
+      <a class="btn btn-secondary" href="/contact-us">Get an Estimate</a>
     </div>
   </section>
   <div class="row">
@@ -143,7 +143,7 @@
         Family owned business serving with pride. A local business you can trust.
       </span>
       <div class="triangle"></div>
-      <a class="btn btn-secondary" href="/contact-us.html">Get an Estimate</a>
+      <a class="btn btn-secondary" href="/contact-us">Get an Estimate</a>
     </div>
   </section>
   <section id="contactus"></section>
