--- a/shed-homes.html
+++ b/shed-homes.html
@@ -16,15 +16,15 @@
     <div class="hero-nav shed-homes">
     <div class="hero-nav__inner">
         <h1>Shed Homes</h1>
-        <a class="btn btn-primary" href="/contact-us.html">Get an estimate</a>
+        <a class="btn btn-primary" href="/contact-us">Get an estimate</a>
     </div>
 </div>
 <div class="subpage-content">
-  <img src="/images/work/shed-houses/Shed-Home-Custom-Frames.jpg" alt="Custom Framing Options">
+  <!-- <img src="/images/work/shed-houses/Shed-Home-Custom-Frames.jpg" alt="Custom Framing Options"> -->
   <h2>Wood & Steel Hybrid</h2>
     <p>We take the strength of steel and combine it with the flexibility of wood. As a result, we have one of the most premier building skeletons in the world!
     </p>
-    <p>Your dream <a href="/shed-homes-shouses.html" class="green-link">shed home</a>, custom home, <a href="/agricultural-commercial-buildings.html" class="green-link">commercial/agricultural building</a>, man cave, garage/shop, and event venues can officially come to life effectively, efficiently and affordably! At T.E.A.M. Builders Ltd. We aren’t just skilled craftsmen, but visionaries and love helping clients dreams come to fruition. If you can dream it, we can help visualize it, and together we can build it!</p>
+    <p>Your dream <a href="/shed-homes-shouses" class="green-link">shed home</a>, custom home, <a href="/agriculture-commercial-buildings" class="green-link">commercial/agricultural building</a>, man cave, garage/shop, and event venues can officially come to life effectively, efficiently and affordably! At T.E.A.M. Builders Ltd. We aren’t just skilled craftsmen, but visionaries and love helping clients dreams come to fruition. If you can dream it, we can help visualize it, and together we can build it!</p>
     <br />
       <div class="text-align-left">
           <br />
@@ -45,7 +45,7 @@
           Don’t delay your remodeling project any longer. Contact us today to get started on your building or renovation project in Cedar Falls, IA.
         </span>
         <div class="triangle"></div>
-        <a class="btn btn-secondary" href="/contact-us.html">Contact Us</a>
+        <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
       </div>
     </section>
     <section id="contactus"></section>
